force-app/main/default/objects/UserInformation__c/UserInformation__c.object-meta.xml
<CustomObject>
    <label>UserInformation</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>