force-app/main/default/objects/UserInformation__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <inlineHelpText>Enter Your First Name.</inlineHelpText>
    <label>FirstName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>