force-app/main/default/objects/UserInformation__c/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <label>HouseNumber</label>
    <length>18</length>
    <type>Text</type>
</CustomField>