force-app/main/default/objects/UserInformation__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>MiddleName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>