force-app/main/default/objects/UserInformation__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>